V2 Schema1 first cut

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,9 @@ if (EXISTS "/usr/bin/clang++")
   set(CMAKE_CXX_STANDARD 17)
   set(CMAKE_CXX_STANDARD_REQUIRED True)
   set(CMAKE_CXX_FLAGS             "-Wall")
+elseif(EXISTS "/opt/rh/gcc-toolset-9/root/usr/bin/g++")
+  set(CMAKE_CXX_COMPILER "/opt/rh/gcc-toolset-9/root/usr/bin/g++")
+  set(CMAKE_CXX_FLAGS    "-Wall -std=c++17")
 elseif(EXISTS "/opt/rh/devtoolset-9/root/usr/bin/g++")
   set(CMAKE_CXX_COMPILER "/opt/rh/devtoolset-9/root/usr/bin/g++")
   set(CMAKE_CXX_FLAGS    "-Wall -std=c++17")
